Added more conferences, fixed conflicts

--- a/webview/index.html
+++ b/webview/index.html
@@ -117,6 +117,9 @@
     <script src="js/bootstrap.min.js"></script>
 
 
+    <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.13/js/dataTables.bootstrap.min.js"></script>
+
     <script>
         var months = ["", "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
 
@@ -150,7 +153,11 @@
                     $("<td>").text(cfpOpened ? "Yes" : "No").appendTo(row);
                     $("tbody").append(row);
                 }
+
+
+                $("table").DataTable();
             });
+
         });
     </script>
 </body>
